--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
             <version>3.1.0</version>
         </dependency>
 
+        <!-- PostgreSQL JDBC Driver -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.23</version> <!-- Check for the latest version -->
+        </dependency>
+
     </dependencies>
 
 </project>
