--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,27 @@ db.username=postgres
 db.password=postgres
 db.driverClassName=org.postgresql.Driver
 
+hibernate.connection.url=jdbc:postgresql://localhost:5433/my_db
+hibernate.connection.username=postgres
+hibernate.connection.password=postgres
+hibernate.connection.driver_class=org.postgresql.Driver
+
+# Hibernate Properties
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+hibernate.show_sql=true
+hibernate.format_sql=true
+hibernate.hbm2ddl.auto=update
+
 # HikariCP Settings
 hikari.maximumPoolSize=10
 hikari.connectionTimeout=30000
 hikari.idleTimeout=600000
 hikari.maxLifetime=1800000
+
+hibernate.hikari.maximumPoolSize=20
+hibernate.hikari.connectionTimeout=30000
+hibernate.hikari.idleTimeout=600000
+hibernate.hikari.maxLifetime=1800000
 
 # Application Settings
 app.port=8080
